idm241/final/final.css
@font-face {
    font-family: 'merriweather';
    src: url('../../fonts/merriweather-bold.ttf') format('truetype');
}

@font-face {
    font-family: 'lato';
    src: url('../../fonts/lato-regular.ttf') format('truetype');
}

:root {
    --white: #FFFFFF;
    --tan: #F4F1EA;
    --brown: #382110;
    --black: #181818;
    --green: #409D69;
    --dark-green: #3B9160;
    --turquoise: #00635D;
    --light-gray: #F2F2F2;
    --med-gray: #999999;
    --yellow: #FDD44F;
    --orange: #FFBD27;
}

* {
    box-sizing: border-box;
}

html, body{
    background-color: var(--white);
    color: var(--brown);
    margin: 0;
    height: 100%;
    text-wrap: pretty;
}

h1 {
    font-family: 'merriweather';
    font-size: 48px;
    color: var(--brown);
    text-align: center;
    margin: 50px 0 25px;
}

h3 {
    font-family: 'merriweather';
    font-size: 24px;
    color: var(--brown);
    margin: 50px 0;
}

.title a {
    text-align: center;
    text-decoration-color: var(--brown);
}

/*descriptions*/
.descriptions {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.descriptions > div {
    width: 500px;
    margin: 25px;
    padding: 50px;
    background-color: var(--tan);
    outline: var(--brown) solid 2px;
    border-radius: 20px;
    box-shadow: 0px 6px 6px rgb(0, 0, 0, 0.3);
}

h2 {
    font-family: 'merriweather';
    font-size: 32px;
    color: var(--brown);
    text-decoration: underline;
    text-align: center;
    margin: 0;
}

.descriptions h3 {
    margin: 40px 0 20px;
}

p, ul{
    font-family: 'lato';
    font-size: 16px;
    line-height: 160%;
    color: var(--brown);
    margin-bottom: 0;
}

p {
    text-decoration: underline ;
}

ul {
    margin: 5px 0 0;
    padding-left: 25px;
}

.wtr-loops-and-modes p, .stars-loops-and-modes p, .ni-loops-and-modes p, .modal p, .more-loops-and-modes p, .less-loops-and-modes p{
    text-decoration: none;
}

.video {
    height: fit-content;
}

video {
    display: block;
    width: 100%;
    max-width: 800px;
    margin: 20px auto 0;
    border-radius: 15px;
}

.space p{
    text-decoration: none;
    margin: 0;
}

/*build*/
.builds {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: start;
    column-gap: 50px;
    row-gap: 50px;
    margin: 100px 25px;
}

.build {
    width: fit-content;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: center;
    row-gap: 10px;
}

.book-cover {
    position: relative;
    display: inline-block;
    margin: 0 auto;
}

.book-cover-img img {
    display: block;
    width: 161.6px;
    height: 200px;
    margin: 0 auto;
    padding: 0 10px;
}

.wtr-button {
    display: flex;
    justify-content: center;
}

.wtr-button button{
    font-family: 'lato';
    font-size: 16px;
    color: var(--white);
    background-color: var(--green);
    border: none;
    border-radius: 5px;
    padding: 6px 10px;
    margin: 0 auto;
    cursor: pointer;
    transition: all 250ms linear;
}

/* star container */
.star-rating {
    display: flex;
    gap: 5px;
    margin: 0 auto;
    cursor: pointer;
}

/* default star style */
.star {
    width: 30px;
    height: 30px;
    background: url('star.svg') no-repeat center/contain;
    fill: var(--med-gray);
    transition: all 250ms;
}

/* hover state */
.star.hovered {
    background: url('star.svg') no-repeat center/contain;
    filter: brightness(0) saturate(100%) invert(72%) sepia(48%) saturate(676%) hue-rotate(1deg) brightness(101%);
}

/* clicked (selected) state */
.star.selected{
    background: url('star.svg') no-repeat center/contain;
    filter: brightness(0) saturate(100%) invert(50%) sepia(100%) saturate(600%) hue-rotate(1deg) brightness(120%);
}

/*not interested button*/
.ni-overlay {
    position: relative;
    width: 100%;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: center;
    row-gap: 10px;
}

.ni-button{
    font-family: 'lato';
    font-size: 16px;
    color: var(--turquoise);
    text-decoration: underline;
    text-align: center;
    background-color: rgba(0, 0, 0, 0);
    border: none;
    margin: 0 auto;
    cursor: pointer;
    transition: all 200ms ease-in-out;
}

.ni-button:hover {
    color: #002926;
}

.ni-box {
    display: none;
    position: absolute;
    z-index: 1000;
    bottom: 31px;
    width: 170px;
    height: 281px;
    background-color: rgba(255, 255, 255, 0.5);
}

.ni-box p {
    text-decoration: none;
}

.ni-overlay {
    transition: all 200ms ease-in-out;
}

/* book description */
.book-description {
    position: absolute;
    z-index: 999;
    top: 0%;
    left: 100%;
    display: flex;
    width: 400px;
    max-width: 25vw;
    flex-direction: column;
    justify-content: left;
    align-items: left;
    margin: 0 20px 0 0;
    padding: 20px;
    row-gap: 10px;
    background-color: var(--white);
    outline: var(--brown) solid 5px;
    border-radius: 5px;
    box-shadow: 0px 6px 6px rgb(0, 0, 0, 0.3);
    /*opacity: 0;*/
    transition: opacity 300ms ease-in-out, visibility 0.3s ease-in-out;
}

.avg-rating {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    column-gap: 5px;
    row-gap: 10px;
}

.book-description h4 {
    font-family: 'merriweather';
    font-size: 16px;
    margin: 0;
}

.book-description h5 {
    font-family: 'merriweather';
    font-size: 14px;
    margin: 0;
}

.book-description p {
    font-size: 14px;
    margin: 0;
    text-decoration: none;
}

.avg-rating img {
    width: 90px;
    height: 18px;
    margin: 0;
    padding: 0;
}

.truncated-text {
    overflow: hidden;
    text-overflow: ellipsis;
    max-height: 89px;
    opacity: 1;
    transition: max-height 300ms ease-in-out, opacity 300ms ease-in-out;
}

.untruncated-text {
    overflow: hidden;
    text-overflow: unset;
    max-height: 500px;
    opacity: 1;
    transition: max-height 300ms ease-in-out, opacity 300ms ease-in-out;
}

.book-description button {
    font-family: 'lato';
    font-size: 14px;
    color: var(--turquoise);
    text-decoration: underline;
    width: fit-content;
    background-color: rgba(0, 0, 0, 0);
    border: none;
    margin: 0;
    cursor: pointer;
    transition: opacity 300ms ease-in-out;
    opacity: 1;
}

.book-cover:hover .book-description, .book-description:hover {
    visibility: visible;
    opacity: 1;
}

@media (max-width: 850px) {
    .book-cover-img img {
        width: 141.6px;
        padding: 0;
    }

    .book-description {
        position: absolute;
        top: 200px;
        left: 50%;
        transform: translateX(-50%);
        max-width: 45vw;
        min-width: 200px;
        display: flex;
        justify-self: center;
        flex-direction: column;
        justify-content: left;
        align-items: left;
        visibility: hidden;
        opacity: 0;
        transition: opacity 300ms ease-in-out;
        overflow: hidden;
    }
}

@media (max-width: 454px) {
    .book-description {
        max-width: 90vw;
    }
}

